--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="card">
         <div class="search">
-            <input type="text" placeholder="Enter City Name" spellcheck="false">
+            <input type="text" placeholder="Enter your City" spellcheck="false">
             <button><img src="images/search.png"></button>
         </div>
         <div class="error">
